# zkl-ui-account

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/account/[walletAddress]/: route.ts
app/api/auth/connect-wallet/: route.ts
app/api/files/received/: route.ts
app/api/files/upload/: route.ts
app/profile/: page.tsx
components/: account-card.tsx  file-upload.tsx  providers.tsx  received-files.tsx  wallet-button.tsx
components/ui/: loading.tsx  skeleton.tsx
lib/: ipfs.ts
lib/db/: index.ts  schema.ts
lib/hooks/: use-file-upload.ts  use-received-files.ts  use-solana-program.ts  use-wallet-account.ts
lib/program/: file-share.ts
programs/file-share/: Anchor.toml  Cargo.toml
programs/file-share/src/: lib.rs
