[package]
name = "file-share"
version = "0.1.0"
description = "Secure file sharing using Solana and IPFS"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "file_share"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"